[tool.poetry]
name = "vggnet"
version = "0.1.0"
description = ""
authors = ["pai_ksh <shkim@publicai.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
numpy = "^2.0.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
